@@ -251,3 +251,7 @@ Test inverse handling
 ##############################################################
 Test MGI datum gives expected results (#207)
 16.33 48.20	595710.37321015028283	5357598.46457545924932 -44.49510847218335
+##############################################################
+Test omerc sensitivity with locations 90d from origin(#114)
+56.958381652832 72.8798	-9985.16336452572614	-227.67701050320997 0.00000000000000
+56.9584 72.8798	9985.16263662453457	-227.67701050313340 0.00000000000000
